--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
 
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+
   --background-color: rgba(238, 239, 233, 1);
 
   font-synthesis: none;
@@ -67,6 +67,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  padding: 0;
   font-family: "Open Sans", sans-serif;
   background-color: var(--background-color);
   /* display: flex;
@@ -76,6 +77,11 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 button {
