--- a/src/index.css
+++ b/src/index.css
@@ -84,38 +84,6 @@ p {
   margin-bottom: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 /* here is the site container for every section */
 
 /* for wider screens I want the container to only be 1200 wide */
@@ -133,6 +101,8 @@ button:focus-visible {
   justify-content: space-between;
   align-items: center;
   padding: 2em 0;
+  position: sticky;
+  top: 0;
 }
 
 .navbarElements {
@@ -158,11 +128,12 @@ button:focus-visible {
   display: none;
   cursor: pointer;
   font-size: 40px;
-  line-height: 1em;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 1em;
-  padding-right: 1em;
+}
+
+.hamburger button {
+  font-size: 1em;
+  background-color: var(--background-color);
+  border: none;
 }
 
 /* styling to make the navbar hamburger on ipad & mobile */
