--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@
   color-scheme: light dark;
 
   --background-color: rgba(238, 239, 233, 1);
+  --siteRed: rgba(236, 158, 42, 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -126,7 +127,6 @@ p {
 
 .hamburger {
   display: none;
-  cursor: pointer;
   font-size: 40px;
 }
 
@@ -134,6 +134,7 @@ p {
   font-size: 1em;
   background-color: var(--background-color);
   border: none;
+  cursor: pointer;
 }
 
 /* styling to make the navbar hamburger on ipad & mobile */
@@ -145,4 +146,32 @@ p {
   .hamburger {
     display: block;
   }
+}
+
+.nav-links {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 200px;
+  transition: transform 0.3s ease;
+  background-color: white;
+  color: #fff;
+  transform: translateX(100%);
+  background-color: var(--background-color);
+  border-left: var(--siteRed) 3px solid;
+}
+.nav-links.open {
+  transform: translateX(0);
+}
+
+.closebtn {
+  align-self: flex-end;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
