--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,10 @@ p {
 }
 
 @media (max-width: 600px) {
+  .hero {
+    height: 60vh;
+  }
+
   .hero h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
