responsive changes to the container

--- a/src/index.css
+++ b/src/index.css
@@ -304,6 +304,9 @@ ul li {
 /* styling to make the navbar hamburger on ipad & mobile */
 
 @media (max-width: 768px) {
+  .container {
+    max-width: 90%;
+  }
   .navbarElements {
     display: none;
   }
