--- a/src/index.css
+++ b/src/index.css
@@ -354,6 +354,41 @@ ul li {
   color: var(--siteturquoise);
 }
 
+/* end of evidence card styling */
+
+/*About me styling*/
+
+.aboutMeAllContent {
+  padding: 30px;
+}
+
+.aboutMeContentContainer {
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 75%;
+  border: 1px solid var(--navBarBorder);
+  display: flex;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: var(--navbarBackground);
+}
+
+.aboutMeTextContent {
+  width: 50%;
+}
+
+.aboutMeImageContent {
+  width: 50%;
+}
+
+.aboutMeImage {
+  border-radius: 50%;
+  height: auto;
+  max-width: 100%;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
 /** MEDIA QUERIES **/
 /*******************
 
@@ -391,6 +426,26 @@ ul li {
   .showcaseLogocontainer {
     grid-template-columns: 1fr 1fr;
     gap: 30px;
+  }
+
+  .aboutMeContentContainer {
+    flex-direction: column;
+  }
+
+  .aboutMeTextContent {
+    width: 100%;
+  }
+
+  .aboutMeImageContent {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .aboutMeImage {
+    max-width: 90%;
   }
 }
 
