--- a/src/index.css
+++ b/src/index.css
@@ -391,6 +391,7 @@ ul li {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  border: 1px solid red;
 }
 
 .footerSocialLinks {
@@ -398,8 +399,9 @@ ul li {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 30%;
   margin-bottom: 10px;
+  width: 60%;
+  border: 1px solid red;
 }
 
 .footerEmail {
@@ -471,6 +473,14 @@ ul li {
 
   .aboutMeImage {
     max-width: 90%;
+  }
+
+  .footerContent {
+    max-width: 90%;
+  }
+
+  .footerSocialLinks {
+    width: 90%;
   }
 }
 
