--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ h3 {
 }
 
 .navbarElements {
-  padding-top: 20px;
+  padding-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -136,14 +136,17 @@ h3 {
 
 .navbarElements li {
   margin-right: 1em;
-  font-size: 18px;
+  font-size: 1.4rem;
+  font-weight: 700;
   line-height: 1.1;
 }
 
 .logo {
-  height: 60px;
+  border-radius: 50%;
+  height: 125px;
   width: auto;
   margin: 0;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
 }
 
 .hamburger {
@@ -209,7 +212,8 @@ ul li {
 /* here is the hero section styling */
 
 .hero {
-  height: 70vh;
+  min-height: 500px;
+  height: 70svh;
 }
 
 .hero h1 {
