--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ h3 {
 
 .logo {
   border-radius: 50%;
-  height: 125px;
+  height: 118px;
   width: auto;
   margin: 0;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
@@ -212,8 +212,8 @@ ul li {
 /* here is the hero section styling */
 
 .hero {
-  min-height: 500px;
-  height: 70svh;
+  min-height: 450px;
+  height: 65vh;
 }
 
 .hero h1 {
