--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  font-size: 20px;
   background-color: var(--background-color);
   /* display: flex;
   place-items: center;*/
@@ -212,8 +213,8 @@ ul li {
 /* here is the hero section styling */
 
 .hero {
-  min-height: 450px;
-  height: 65vh;
+  min-height: 500px;
+  height: 80vh;
 }
 
 .hero h1 {
@@ -746,7 +747,8 @@ ul li {
 
 @media (max-width: 600px) {
   .hero {
-    height: 60vh;
+    height: 80vh;
+    min-height: 550px;
   }
 
   .hero h1 {
@@ -811,6 +813,6 @@ ul li {
 
 @media screen and (max-width: 920px) and (orientation: landscape) {
   .hero {
-    height: 500px;
+    height: 700px;
   }
 }
