--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   background-color: var(--background-color);
   /* display: flex;
   place-items: center;*/
@@ -717,6 +717,10 @@ ul li {
 
   .aboutMeImage {
     max-width: 90%;
+  }
+
+  .evidenceCardHolder {
+    padding: 10px;
   }
 
   .footerContent {
