--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ h3 {
 /* here is the navbar styling */
 
 .navbar {
-  padding: 2em 0;
+  padding: 0.5em 0;
   position: sticky;
   background-color: var(--navbarBackground);
   top: 0;
@@ -144,7 +144,7 @@ h3 {
 
 .logo {
   border-radius: 50%;
-  height: 118px;
+  height: 100px;
   width: auto;
   margin: 0;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
@@ -213,8 +213,6 @@ ul li {
 /* here is the hero section styling */
 
 .hero {
-  min-height: 500px;
-  height: 80vh;
 }
 
 .hero h1 {
@@ -245,6 +243,7 @@ ul li {
 
   max-width: 50%;
   margin-top: 20px;
+  margin-bottom: 15px;
 }
 
 .hero h4 {
@@ -750,11 +749,6 @@ ul li {
 }
 
 @media (max-width: 600px) {
-  .hero {
-    height: 70vh;
-    min-height: 500px;
-  }
-
   .hero h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
@@ -795,10 +789,6 @@ ul li {
 }
 
 @media (max-width: 400px) {
-  .hero {
-    height: 60vh;
-  }
-
   .hero h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
@@ -812,11 +802,5 @@ ul li {
 
   .kpiStats {
     max-width: 95%;
-  }
-}
-
-@media screen and (max-width: 920px) and (orientation: landscape) {
-  .hero {
-    height: 525px;
   }
 }
